@@ -27,65 +27,20 @@ if [ "$1" = "--service" ]; then
     echo "  to mythfrontend when using --service"
     echo "Please set them in /etc/mythtv/session-settings instead"
 
-    # set log files
-    MYTHFELOG="/var/log/mythtv/mythfrontend.log"
-    MYTHWELCOMELOG="/var/log/mythtv/mythwelcome.log"
-
-    # make sure that our log files exist
-    # it's ok if we fail, we'll fall back to a different logfile location later on
-    if [ ! -f "${MYTHFELOG}" ]; then
-        touch "${MYTHFELOG}" || true
-    fi
-    if [ ! -f "${MYTHWELCOMELOG}" ]; then
-        touch "${MYTHWELCOMELOG}" || true
-    fi
-    # make sure log files are writeable by members of the "mythtv" group
-    # again, it's ok if we fail so we redirect STDERR to /dev/null
-    chgrp mythtv "${MYTHFELOG}" 2>/dev/null && \
-    chmod g+rw "${MYTHFELOG}" 2>/dev/null || true
-    chgrp mythtv "${MYTHWELCOMELOG}" 2>/dev/null && \
-    chmod g+rw "${MYTHWELCOMELOG}" 2>/dev/null || true
-
-    # Are the log files writeable as well? If not, warn the user and
-    # fall back to tempory log location
-    if [ ! -w "${MYTHFELOG}" ]; then
-        echo "Sorry, "${MYTHFELOG}" is not writeable. Please make sure it's writeable"
-        echo "  for the \"mythtv\" group."
-        echo "Logging to /tmp/mythfrontend.${$}.log instead"
-        MYTHFELOG="/tmp/mythfrontend.${$}.log"
-    fi
-
-    if [ ! -w "${MYTHWELCOMELOG}" ]; then
-        echo "Sorry, "${MYTHWELCOMELOG}" is not writeable. Please make sure it's writeable"
-        echo "  for the \"mythtv\" group."
-        echo "Logging to /tmp/mythwelcome.${$}.log instead"
-        MYTHWELCOMELOG="/tmp/mythwelcome.${$}.log"
-    fi
-
-
     #if group membership is okay, go ahead and launch
     if [ "$IGNORE_NOT" = "0" ]; then
         # start mythtv frontend software
         if [ "$MYTHWELCOME" = "true" ]; then
-            if [ ! -z $MYTHFRONTEND_OPTS ]; then
-                echo "Note: It looks like you set MYTHFRONTEND_OPTS in /etc/mythtv/session-settings" | tee -a "${MYTHWELCOMELOG}"
-                echo "However, mythwelcome won't recognize these." | tee -a "${MYTHWELCOMELOG}"
-                echo "You have to set to set your startup options in the mythwelcome settings screens" | tee -a "${MYTHWELCOMELOG}"
-                echo "Starting mythwelcome.." | tee -a "${MYTHWELCOMELOG}"
-            fi
             # Note: if mythwelcome would support -O to override database settings,
             # we could tell it to start the frontend with $MYTHFRONTEND_OPTS
             # This is not possible yet, but maybe it'll happen in the future
-            exec mythwelcome | tee -a "${MYTHWELCOMELOG}"
+            exec mythwelcome --syslog local7
         else
-            echo "Starting mythfrontend.real.." >> "${MYTHFELOG}"
-
-            until /usr/bin/mythfrontend.real --logfile "${MYTHFELOG}" ${MYTHFRONTEND_OPTS}
+            until /usr/bin/mythfrontend.real --syslog local7 ${MYTHFRONTEND_OPTS}
                   RET=$?
                   [ "$RET" = "0" -o "$RET" = "1" -o "$RET" = "254" ]
             do
-                  echo "Restarting mythfrontend.real..." >> "${MYTHFELOG}"
-                  notify-send -i info 'Restarting Frontend' "The front-end crashed unexpectedly (exit code $RET) and is restarting. Please wait..." 2>> "${MYTHFELOG}"
+                  notify-send -i info 'Restarting Frontend' "The front-end crashed unexpectedly (exit code $RET) and is restarting. Please wait..."
             done
         fi
     fi
@@ -93,7 +48,7 @@ if [ "$1" = "--service" ]; then
 elif [ "$1" != "--service" ]; then
     # if group membership is okay, go ahead and launch
     if [ "$IGNORE_NOT" = "0" ]; then
-        exec /usr/bin/mythfrontend.real "$@"
+        exec /usr/bin/mythfrontend.real --syslog local7 "$@"
     fi
 fi
  
