@@ -5,6 +5,8 @@ mythtv (2:0.25.0~master.20120214.f853a5b-0ubuntu2) UNRELEASED; urgency=low
   * Fix log rotation to reload rsyslog for all new logs when necessary.
   * Create rsyslog directory only in mythtv-common package.
   * Install rsyslog conf from mythtv-common package not backend package.
+  * Drop special mythtv-frontend and mythwelcome logging functionality
+    in favor of local7 rsyslog support.
 
  -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 14 Feb 2012 23:46:56 -0600
 
